...
                                <rect key="frame" x="177" y="418" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="LEN-rf-SiL"/>
                                    <constraint firstAttribute="height" constant="60" id="taC-nl-YYd"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYA-gt-xJ6">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="HXx-r5-2j8"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
                                                    <rect key="frame" x="354" y="8" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="033-U3-KYk"/>
                                                        <constraint firstAttribute="height" constant="44" id="RpI-BK-abL"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeButtonOn"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="hwy-2J-7dP" eventType="touchUpInside" id="6wH-Sy-37l"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wmg-bt-d7P" userLabel="Deta Label
                                                    <rect key="frame" x="24" y="170" width="97" height="16"/>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="8C8-PA-LLI"/>
                                    <constraint firstAttribute="width" constant="24" id="d3n-2s-xAE"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="" image="BackwardButton"/>
                                <connections>
                                    <action selector="idTapBackButton" destination="KNu-Ns-37m" eventType="touchUpInside" id="SGE-kE-rVg"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2T3-gd-1bE">
                                <rect key="frame" x="182" y="795" width="50" height="50"/>
...
