//
//  ImagesListCell.swift
//  ImageFeed
//
//  Created by Denis Bokov on 08.10.2025.
//

import UIKit
import Kingfisher

protocol ImagesListCellDelegate: AnyObject {
    func imageListCellDidTapLike(_ cell: ImagesListCell)
}

final class ImagesListCell: UITableViewCell {
    static let reuseIdentifier = "ImagesListCell"
    
    weak var delegate: ImagesListCellDelegate?
    
    @IBOutlet weak var likeButton: UIButton!
    @IBOutlet weak var cellImage: UIImageView!
    @IBOutlet weak var dateLabel: UILabel!
    
    override func prepareForReuse() {
        super.prepareForReuse()
        
        cellImage.kf.cancelDownloadTask()
    }
    
    @IBAction private func likeButtonClicked() {
        delegate?.imageListCellDidTapLike(self)
    }
    
    func setIsLiked(_ isLiked: Bool) {
        let imageName = isLiked ? UIImage(resource: .likeButtonOn) : UIImage(resource: .likeButtonOff)
        
        likeButton.setImage(imageName, for: .normal)
        
        likeButton.accessibilityIdentifier = isLiked ? "LikeButtonOn" : "LikeButtonOff"
    }
}
